[package]
name = "offload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3.25"
rocket = "0.4.11"
local-ip-address = "0.5.1"
